gateway_api_manifests/route1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route1 # rename. testing this out.
  namespace: traefik
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: hubble-ui
        namespace: kube-system
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: route1Grant
  namespace: kube-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
