gateway_api_manifests/route_longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-to-longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: production
      namespace: gateway-api
      sectionName: http
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: longhorn-frontend
        port: 80
